[package]
name = "fls"
version = "0.0.1"
authors = ["heyo@devdao.com"]
description = "Fe Language Server"
repository = "https://github.com/developerdao/fls"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
im = "15.1.0"
lsp-server = "0.5.1"
lsp-types = "0.90.1"
petgraph = "0.5.1"
serde_json = "1.0.64"
tempfile = "3.2.0"
url = "2.2.2"
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8"
once_cell = "1.7.2"
serde = { version = "1.0.124", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.64" }